fix operation visible func

--- a/src/components/StandardTable/index.less
+++ b/src/components/StandardTable/index.less
@@ -1,9 +1,9 @@
 .operationArea {
-  margin-bottom: 16px;
   .operation {
     margin-right: 8px;
-  }
-  &:empty {
-    margin-bottom: 0px;
+    margin-bottom: 16px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
